--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <h1 id="level-title"><button id="start">Press to Start</button></h1>
+  <button id="start">Press to Start</button>
   <div class="container">
     <div class="row">
 
