--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Simon</title>
-  <link rel="icon" type="image/x-icon" href="simon-game-logo.ico">
+  <link rel="apple-touch-icon" type="image/x-icon" href="simon-game-logo.ico">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
 </head>
